--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/betrybe/sd-01-week14-js-unit-tests/issues"
   },
-  "homepage": "https://github.com/betrybe/sd-01-week14-js-unit-tests#readme"
+  "homepage": "https://github.com/betrybe/sd-01-week14-js-unit-tests#readme",
+  "devDependencies": {
+    "jest": "^24.9.0"
+  }
 }
